syntax = "proto3";

// This file follows google's gRPC naming conventions:
// https://cloud.google.com/apis/design/naming_convention

import "google/protobuf/empty.proto";
import "api/queryhandler/messages.proto";
import "google/protobuf/wrappers.proto";

option go_package = "gitlab.figo.systems/platform/monoskope/monoskope/pkg/api/queryhandler";

package queryhandler;

// UserService is a service to query users.
service UserService {
  // GetAll returns all users.
  rpc GetAll(google.protobuf.Empty) returns (stream User);
  // GetById returns the user found by the given id.
  rpc GetById(google.protobuf.StringValue) returns (User);
  // GetByEmail returns the user found by the given email address.
  rpc GetByEmail(google.protobuf.StringValue) returns (User);
  // GetRoleBindingsById returns all role bindings related to the given user id.
  rpc GetRoleBindingsById(google.protobuf.StringValue)
      returns (stream UserRoleBinding);
  // GetAuditTrailById returns a stream of all events related to the given id
  rpc GetAuditTrailById(google.protobuf.StringValue)
      returns (stream AuditEvent);
}

// TenantService is a service to query tenants.
service TenantService {
  // GetAll returns all tenants.
  rpc GetAll(google.protobuf.Empty) returns (stream Tenant);
  // GetById returns the tenant found by the given id.
  rpc GetById(google.protobuf.StringValue) returns (Tenant);
  // GetAuditTrailById returns a stream of all events related to the given id
  rpc GetAuditTrailById(google.protobuf.StringValue)
      returns (stream AuditEvent);
}
